--- a/index.html
+++ b/index.html
@@ -113,15 +113,15 @@
 				
 				<p>
 				<img border="0" src="./images/Me3.jpg" width="250" height="175" class="float-left" />
-				I was born in Honghu city,Hubei province, China in 1998. I received B.Eng.degrees in information security from China University of Geosciences, Wuhan, China in 2020. 
-				Respectively, I received the Ms.Eng.degrees in computer science and technology from China University of Geosciences, Wuhan, China in 2023. Now, I am pursuing my ph. D. degree in Department of Automation, Tsinghua University.
-				My Ph.D's supervisor is Prof. <A href="https://www.au.tsinghua.edu.cn/info/1107/1558.htm" target="_blank"><strong>Ling Wang</strong></A>. 
-				My master's supervisor is Prof. <A href="http://grzy.cug.edu.cn/gongwenyin" target="_blank"><strong>Wenyin Gong</strong></A>.
-				<br>My research interests include Intelligent computation, Intelligent manufacturing, Green scheduling, Deep reinforcement learning, Multi-objective Optimization.
-				<br><br><br>My CSDN is <a href="https://blog.csdn.net/qq_36820823?type=blog", target="_blank"><strong>here</strong></a>. 
-				<br>My researchgate is <a href="https://www.researchgate.net/profile/Rui_Li339", target="_blank"><strong>here</strong></a>. 
-				<br>My ORCiD is <a href="https://orcid.org/0000-0001-5335-9453", target="_blank"><strong>here</strong></a>.
-				<br>My email: liruicug@163.com.
+				I was born in Handan city,Hebei province, China in 1998. I received B.Eng.degrees in industrial engineering from College of Information Management, Nanjing Agricultural University, Nanjing, China, in 2019. 
+				Now, I am pursuing my ph. D. degree in  mechanical engineering at Shanghai Jiao Tong University, Shanghai, China, and Department of Mechanical Engineering, Politecnico di Milano, Milan, Italy.
+				My domestic supervisor is Prof. <A href="https://me.sjtu.edu.cn/teacher_directory1/dushichang.html" target="_blank"><strong>Shichang Du</strong></A>. 
+				My foreign supervisor is Prof. <A href="https://www.mecc.polimi.it/en/research/faculty/prof-andrea-matta" target="_blank"><strong>Matta Andrea</strong></A>.
+				<br>My  current research interests include analysis, modelling, and decision-making optimization for the operations management problems in manufacturing systems and service systems. My technical specialties include mathematical modeling, stochastic optimization, exact optimization algorithm, intelligent optimization algorithm, statistical modeling analysis, simulation optimization. 
+				<br>My researchgate is <a href="https://www.researchgate.net/profile/Xiaoxiao-Shen-2", target="_blank"><strong>here</strong></a>. 
+				<br>My ORCiD is <a href="https://orcid.org/0000-0003-1396-8451", target="_blank"><strong>here</strong></a>.
+				<br>My phone (Wechat): 18521308203.	
+				<br>My email: sjtusxx98@sjtu.edu.cn; xinjian02698@163.com.
 				<br><br>A beautiful song <strong>"Wonderful Tonight-Eric Clapton"</strong> is send to you.<br></br>
 				<audio id="music1" controls="controls" autoplay="autoplay" "loop"="loop" preload id="music1">
 					<source src="BackMusic/music.mp3" type="audio/mp3">					
