--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <link rel="stylesheet" href="images/style.css" type="text/css" />
 
-<title>Rui Li's Homepage</title>
+<title>Xiaoxiao Shen's Homepage</title>
 	
 </head>
 
@@ -24,7 +24,7 @@
 		<!--header -->
 		<div id="header">			
 				
-			<h1 id="logo-text"><a href="index.htm"><font size="6">Dr. Rui Li</font></a></h1>		
+			<h1 id="logo-text"><a href="index.htm"><font size="6">Dr. Xiaoxiao Shen</font></a></h1>		
 			<p id="slogan">Welcome to My Personal Academic Homepage...</p>		
 			
 			<div id="header-links">
