--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 				I was born in Handan city, Hebei province, China in 1998. I received B.Eng.degrees in industrial engineering from College of Information Management, Nanjing Agricultural University, Nanjing, China, in 2019. 
 				Now, I am pursuing my ph. D. degree in  mechanical engineering at Shanghai Jiao Tong University, Shanghai, China, and Department of Mechanical Engineering, Politecnico di Milano, Milan, Italy.
 				My domestic supervisor is Prof. <A href="https://me.sjtu.edu.cn/teacher_directory1/dushichang.html" target="_blank"><strong>Shichang Du</strong></A>. 
-				My foreign supervisor is Prof. <A href="https://www.mecc.polimi.it/en/research/faculty/prof-andrea-matta" target="_blank"><strong>Matta Andrea</strong></A>.
+				My foreign supervisor is Prof. <A href="https://www.mecc.polimi.it/en/research/faculty/prof-andrea-matta" target="_blank"><strong>Andrea Matta</strong></A>.
 				<br>My  current research interests include analysis, modelling, and decision-making optimization for the operations management problems in manufacturing systems and service systems. My technical specialties include mathematical modeling, stochastic optimization, exact optimization algorithm, intelligent optimization algorithm, statistical modeling analysis, simulation optimization. 
 				<br>My researchgate is <a href="https://www.researchgate.net/profile/Xiaoxiao-Shen-2", target="_blank"><strong>here</strong></a>. 
 				<br>My ORCiD is <a href="https://orcid.org/0000-0003-1396-8451", target="_blank"><strong>here</strong></a>.
