--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
 
 				<ul>
 					<li>Analysis, modelling, and decision-making optimization</li>
-					<li>operations management</li>
-					<li>manufacturing systems</li>
-					<li>service systems</li>
+					<li>Operations management</li>
+					<li>Manufacturing systems</li>
+					<li>Service systems</li>
 					<li>Reinforcement Learning</li>
 					<li>Stochastic optimization</li>
 					<li>Exact optimization algorithm</li>
@@ -170,22 +170,21 @@
 				<h2>Awarded Honors</h2>
 
 				<ul>
-					<li><font color=#0000ff>Special prize of the 33rd Science and Technology Paper Report Meeting of China University of Geosciences (Wuhan)</font>, Awarded by CUG, 2022.</font> </li>
-					<li><font color=#0000ff>National Scholarship for Postgraduate Students</font>, Awarded by China Ministry of Education, 2022.(CUG, School of CS, Ms)</font> </li>
-					<li><font color=#0000ff>National Scholarship for Postgraduate Students</font>, Awarded by China Ministry of Education, 2021.(CUG, School of CS, Ms)</font> </li>
-					<li><font color=#0000ff>The third prizee of the 18th "Huawei Cup" National Graduate Mathematical Contest in Modeling</font>, Awarded by "Huawei Cup" 2021 Program Committee, 2021.</font> </li>
-					<li><font color=#0000ff>The third prizee of the 17th "Huawei Cup" National Graduate Mathematical Contest in Modeling</font>, Awarded by "Huawei Cup" 2020 Program Committee, 2020.</font> </li>
-					<li><font color=#0000ff>National Encouragement Scholarship</font>, Awarded by China Ministry of Education, 2019.</font> </li>
-					<li><font color=#0000ff>First prize in Central China Region of the 2th China CPU Parallel Optimization Challenge (CPC)</font>, Awarded by China Computer Federation, 2018.</font> </li>
-					<li><font color=#0000ff>President Scholarship</font>, Awarded by China University of Geosciences, 2017.</font> </li>
+					<li><font color=#0000ff>National Scholarship, National Inspirational Scholarship, Shanghai Jiao Tong University Huihe Medical Scholarship</font>, 2017, 2018, 2021.</font> </li>
+					<li><font color=#0000ff>There are more than 10 awards of national and above mathematical modeling competitions, including the Meritorious Winner Prize (first prize) of the Interdisciplinary Contest In Modeling, the second prize of the "Huawei Cup" National Graduate Mathematical Modeling Contest (twice in 2019 and 2020), the second prize of the postgraduate group of the Asia-Pacific College Mathematical Contest in Modeling (APMCM), the third prize of the National Undergraduate Mathematical Modeling Contest in Jiangsu Province, etc</font> </li>
+					<li><font color=#0000ff>The first prize of the fourth "FAW Toyota Cup" Industrial Engineering and Lean Management Innovation Competition in 2021 China University Students Mechanical Engineering Innovation Competition </li>
+					<li><font color=#0000ff>The third prize of the 16th "Dongfeng Nissan Cup" Tsinghua IE Liangjian National Industrial Engineering Application Case Competition in 2021 </li>					
+					<li><font color=#0000ff>The second prize for groups and the third prize for individuals in the POCIB National College Students' Foreign Trade Ability Competition in 2016 </li>
+					<li><font color=#0000ff>Outstanding League Cadres of Shanghai Jiao Tong University and Three Good Students of Shanghai Jiao Tong University </li>	
 				</ul>	
 
 				<a name="activities"></a>				
-				<h2>Professional Activities</h2>
+				<h2>Social Activities</h2>
 
 				<ul>
-					<li><font color=#0000ff>Reviewer of</font> Expert Systems with Applications. 2022.</font> </li>
-					 
+					<li><font color=#0000ff>Student Member </font> of Operations Research Society of China. </font> </li>
+                                        <li><font color=#0000ff>Reviewer </font> of Computers & Industrial Engineering journal. </font> </li> 
+					<li><font color=#0000ff>Secretary </font> of Doctoral League Branch of the Department of Industrial Engineering and Management, and member of the ministerial group of the Graduate Student Association of the Institute. </font> </li>
 				</ul>
 
 				<a name="work"></a>				
