--- a/index.html
+++ b/index.html
@@ -199,14 +199,10 @@
 
 				<ul>
 					<li>
-						<font color=#0000ff>National Natural Science Foundation of China</font> "Theory and method of enhanced intelligent optimization for shop energy efficiency scheduling", member, 62273193. 2023.1-2026.12.</font> 
+						<font color=#0000ff>National Key Research and Development Project</font> "Research and application of intelligent wiring and reliability technical standards for domestic high-end CNC machine tools", member, 2022YFF0605700. 2023.1-2025.12.</font> 
 					</li>
 					<li>
-						<font color=#0000ff>National Key Research and Development Project</font> "Hierarchical manufacturing collaboration technology for intelligent interconnected equipment groups", member, 2020YFB1712102. 2023.1-2023.12.</font> 
-					</li>
-					<li>
-						<font color=#0000ff>National Key Research and Development Project</font> "Development and Application of integrated Platform of Design/Manufacturing/Operation and Maintenance of large-scale engineering Equipment under complex Construction Environment", 
-						<font color=#0000ff>Project 2</font> "Dynamic Collaboration and intelligent flexible production scheduling method of engineering equipment supply Chain under Uncertain Environment", Key member, 2021YFB3301602. 2021.12-2024.11.</font> 
+						<font color=#0000ff>Weichai Power:</font> "New Product Center Intelligent Scheduling Project", member, 2020-2023.</font> 
 					</li>
 
 				</ul>
