--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 				<h2>About Me</h2>
 				
 				<p>
-				<img border="0" src="./images/Me3.jpg" width="165.2" height="231.6" class="float-left" />
+				<img border="0" src="./images/Me3.jpg" width="110.1" height="193" class="float-left" />
 				I was born in Handan city, Hebei province, China in 1998. I received B.Eng.degrees in industrial engineering from College of Information Management, Nanjing Agricultural University, Nanjing, China, in 2019. 
 				Now, I am pursuing my ph. D. degree in  mechanical engineering at Shanghai Jiao Tong University, Shanghai, China, and Department of Mechanical Engineering, Politecnico di Milano, Milan, Italy.
 				My domestic supervisor is Prof. <A href="https://me.sjtu.edu.cn/teacher_directory1/dushichang.html" target="_blank"><strong>Shichang Du</strong></A>. 
@@ -216,7 +216,7 @@
 			
 			<p>   			
 			Design by: <a href="http://www.styleshout.com/" target="_blank">styleshout</a> | 
-			Modified by: <a href="index.htm">CUG Rui Li</a> |
+			Modified by: <a href="index.htm">Xiaoxiao Shen</a> |
 			Valid: <a href="http://validator.w3.org/check/referer" target="_blank">XHTML</a> | 
 			<a href="http://jigsaw.w3.org/css-validator/check/referer" target="_blank">CSS</a>		
 			
