--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					
 				</ul>	
 				
-				<h3>Just Thinking...</h3>
+				<h3>To learn, to think, to create</h3>
 				<div class="left-box">
 					<p><img border="0" src="./images/cat.gif" width="185" height="100"/></p>
 				</div>
