--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				</div>
 
 				<div class="left-box">
-					<a href="http://www.clustrmaps.com/map/cs.cug.edu.cn/teacherweb/gwy/" title="Visitor Map for cs.cug.edu.cn/teacherweb/gwy/"><img src="//www.clustrmaps.com/map_v2.png?u=JSCi&d=q7U6bRRwpgblsnZG0INv2bchv3QgqcaGG1a7STerjw8" /></a>
+				        <a href="https://clustrmaps.com/site/1buq4"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=nCmZ_He8gI9t3Hk-yQ14PYv-DTwoIGk8Hlc6r_Ag0fw&cl=ffffff" /></a>
 				</div>
 
 				<!--div class="left-box">
