--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					<li><a href="#projects">Project</a></li>
 					<li><a href="#experiences">Research Experiences</a></li>	
 					<li><a href="#honors">Awarded Honors</a></li>
-					<li><a href="#activities">Professional Activities</a></li>
+					<li><a href="#activities">Social Activities</a></li>
 				</ul>	
 				
 			
