--- a/chs.htm
+++ b/chs.htm
@@ -182,7 +182,7 @@
 						<h3>期刊论文</h3>
 						<ol reversed>         
 							<!-- li>李瑞, 王凌, 龚文引*, <font color=#0000ff>知识驱动的模因算法求解分布式绿色柔性调度</font>, 华中科技大学学报（自然科学版）. 2022, 50(06):55-60. (<b>EI index</b>) </li>	
-							<li>李瑞, 龚文引*, <font color=#0000ff>改进的基于分解的多目标进化算法求解双目标模糊柔性作业车间调度</font>, 控制理论与应用. 2022, 39(1): 31 - 40. (<b>EI index</b>) </li--！>
+							<li>李瑞, 龚文引*, <font color=#0000ff>改进的基于分解的多目标进化算法求解双目标模糊柔性作业车间调度</font>, 控制理论与应用. 2022, 39(1): 31 - 40. (<b>EI index</b>) </li-->
 							<li>None. 
 							</li>						
                                                 </ol> 
