--- a/chs.htm
+++ b/chs.htm
@@ -163,19 +163,19 @@
 						<h3>SCI</h3> 
 						<ol reversed>         
 						<li>
-						<font color=#000000> Xiaoxiao Shen, Jun Lv, Shichang Du*, Yafei Denga, Andrea Matta. Dynamic integrated online and offline advance scheduling under multitype revisit demand uncertainty. The International Journal of Management Science. R0-Under Review.</font>. 
+						<font color=#000000> Xiaoxiao Shen, Jun Lv, Shichang Du*, Yafei Denga, Andrea Matta. Dynamic integrated online and offline advance scheduling under multitype revisit demand uncertainty. The International Journal of Management Science. R0-Under Review.</font> 
 						</li>
 						<li>
-						<font color=#000000> Xiaoxiao Shen, et al. Multiserver time window allowance schedules for virtual visits with uncertain time-dependent no shows and service times. Advanced Engineering Informatics. R0-Under Review.</font>.
+						<font color=#000000> Xiaoxiao Shen, et al. Multiserver time window allowance schedules for virtual visits with uncertain time-dependent no shows and service times. Advanced Engineering Informatics. R0-Under Review.</font>
 						</li>
 						<li>
-						<font color=#000000> Xiaoxiao Shen, Jun Lv, Shichang Du*, Yafei Deng, Molin Liu, and Yulu Zhou. Integrated Optimization of Electric Vehicles Charging Location and Allocation for Valet Charging Service. Flexible Services and Manufacturing Journal. R0-Under Review.</font>.
+						<font color=#000000> Xiaoxiao Shen, Jun Lv, Shichang Du*, Yafei Deng, Molin Liu, and Yulu Zhou. Integrated Optimization of Electric Vehicles Charging Location and Allocation for Valet Charging Service. Flexible Services and Manufacturing Journal. R0-Under Review.</font>
 						</li>			
 						<li>
-						<font color=#000000> Xiaoxiao Shen, Shichang Du*, Yan-Ning Sun, Poly Z.H. Sun, Rob Law, Edmond Q. Wu. Advance scheduling for chronic care under online or offline revisit uncertainty, IEEE Transactions on Automation Science and Engineering. R1-Decision in process.</font>.
+						<font color=#000000> Xiaoxiao Shen, Shichang Du*, Yan-Ning Sun, Poly Z.H. Sun, Rob Law, Edmond Q. Wu. Advance scheduling for chronic care under online or offline revisit uncertainty, IEEE Transactions on Automation Science and Engineering. R1-Decision in process.</font>
 						</li>
 						<li>
-						<font color=#000000> Xiaoxiao Shen, et al. (2022) Scheduling policies analysis for matching operations in Bernoulli selective assembly lines, International Journal of Production Research, 60:13, 3965-3988.</font>.						
+						<font color=#000000> Xiaoxiao Shen, et al. (2022) Scheduling policies analysis for matching operations in Bernoulli selective assembly lines, International Journal of Production Research, 60:13, 3965-3988.</font>						
 						</li>
 						</ol> 
 							
@@ -200,24 +200,28 @@
 				<h2>所获奖励</h2>
 
 				<ul>		
-					<li><b>研究生国家奖学金</b>,  中国地质大学(武汉), 10/2022.</li>
-					<li><b>优秀共青团员</b>, 中国地质大学(武汉), 05/2022.</li>
-					<li><b>第十八届“华为杯”全国研究生数学建模竞赛B题三等奖</b>,  中国学位与研究生教育学会, 12/2021.</li>
-					<li><b>研究生国家奖学金</b>,  中国地质大学(武汉), 10/2021.</li>
-					<li><b>第十七届“华为杯”全国研究生数学建模竞赛D题三等奖</b>,  中国学位与研究生教育学会, 12/2020.</li>
-					<li><b>国家励志奖学金</b>, 中国地质大学(武汉), 11/2019.</li>
-					<li><b>第二届国产并行CPU挑战赛(CPC)赛区一等奖, 中国地质大学（武汉）地大2队</b>, 中国计算机学会, 08/2018.</li>
-					<li><b>第六届“英特尔杯”并行应用挑战赛(PAC)并行基金将, 中国地质大学（武汉）地大2队</b>, 中国计算机学会高性能计算专业委员会, 08/2018.</li>
-					<li><b>优秀共青团员</b>, 中国地质大学(武汉), 05/2018.</li>
-					<li><b>校长奖学金</b>,  中国地质大学(武汉), 11/2017.</li>
-					<li><b>优秀共青团员</b>, 中国地质大学(武汉), 05/2017.</li>
+					<li><font color=#000000>上海交通大学机械与动力工程学院优秀团支部, 07/2022.</font></li>
+					<li><font color=#000000>上海交通大学优秀团干部, 05/2022.</font></li>
+					<li><font color=#000000>上海交通大学主题团日三等奖, 12/2021.</font></li>
+					<li><font color=#000000>中国大学生机械工程创新大赛“一汽丰田杯”第四届工业工程与精益管理创新赛全国一等奖, 12/2021.</font></li>
+					<li><font color=#000000>第十六届“东风日产杯”清华IE亮剑全国工业工程应用案例大赛全国三等奖, 11/2021.</font></li>
+					<li><font color=#000000>上海交通大学汇禾医疗奖学金, 10/2021.</font></li>
+					<li><font color=#000000>上海交通大学三好学生, 09/2021.</font></li>
+					<li><font color=#000000>中国研究生创新实践系列大赛“华为杯”第十六届研究生数学建模竞赛全国二等奖, 10/2020.</font></li>
+					<li><font color=#000000>第九届亚太地区大学生数学建模竞赛（APMCM）研究生组全国二等奖, 12/2019.</font></li>
+					<li><font color=#000000>中国研究生创新实践系列大赛“华为杯”第十七届研究生数学建模竞赛全国二等奖, 10/2019.</li>
+					<li><font color=#000000>国家励志奖学金, 09/2018.</font></li>	
+					<li><font color=#000000>美国大学生数学建模竞赛Meritorious Winner（一等奖）, 04/2018.</font></li>
+					<li><font color=#000000>“高教杯”全国大学生数学建模竞赛（江苏赛区）三等奖, 12/2017.</font></li>
+					<li><font color=#000000>国家奖学金, 9/2017.</font></li>
+					<li><font color=#000000>POCIB全国大学生外贸从业能力大赛团体二等奖、个人三等奖, 05/2017.</font></li>
 				</ul>
 
 				<a name="Project"></a>
 				<h2>项目经历</h2>
 
 				<ul>	
-					<li>国家重点研发项目，"复杂施工环境下大型工程装备设计/制造/运维一体化平台研发与应用"，课题二"不确定环境下工程装备供应链动态协同与智能柔性排产方法"，骨干成员，2021YFB3301602, 2021.12-2024.11</li>
+					<li>国家重点研发项目，"国产高端数控机床智能组线与可靠性技术标准研究及应用"，课题五，成员，2022YFF0605700, 2023.1-2025.12</li>
 		
 				</ul> 
 
