--- a/chs.htm
+++ b/chs.htm
@@ -84,7 +84,7 @@
 				</div>	
 				
 				<div class="left-box">
-					<a href="https://clustrmaps.com/map/Shen-xiaoxiao.github.io"  title="Visitor Map for Shen-xiaoxiao.github.io"><img src="//www.clustrmaps.com/map_v2.png?d=nCmZ_He8gI9t3Hk-yQ14PYv-DTwoIGk8Hlc6r_Ag0fw&cl=ffffff" /></a>
+					<a href="https://clustrmaps.com/site/1buq4"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=nCmZ_He8gI9t3Hk-yQ14PYv-DTwoIGk8Hlc6r_Ag0fw&cl=ffffff" /></a>
 				</div>
 
 				<!--div class="left-box">
