--- a/chs.htm
+++ b/chs.htm
@@ -229,29 +229,27 @@
 				<h2>合作成员</h2>
 
 				<ul>
-					<li><A href="https://www.au.tsinghua.edu.cn/info/1107/1558.htm">Prof. 王凌</a>  (我的博士生导师, &nbsp;清华大学教授,&nbsp;博士生导师，国家杰出青年基金获得者)  </li>
-					<li><A href="http://grzy.cug.edu.cn/gongwenyin">Prof. 龚文引</a>  (我的研究生导师, &nbsp;中国地质大学(武汉)教授,&nbsp;博士生导师，湖北省杰出青年基金获得者)  </li>
-					<li><a href="http://grzy.cug.edu.cn/luchao/zh_CN/index.htm">卢超</a> (我的研究生第二导师, &nbsp;中国地质大学(武汉)副教授,&nbsp;硕士生导师)</FONT> </li>
+					<li><A href="https://me.sjtu.edu.cn/teacher_directory1/dushichang.html">Prof. 杜世昌</a>  (我的国内导师, &nbsp;上海交通大学教授,&nbsp;博士生导师)  </li>
+					<li><A href="https://www.mecc.polimi.it/en/research/faculty/prof-andrea-matta">Prof. Andrea Matta</a>  (我的国外导师, &nbsp;意大利米兰理工大学教授,&nbsp;博士生导师)  </li>
 				</ul> 
 
 				<a name="links"></a>
 				<h2>有用链接</h2>
 
 				<ul>
-					<li> <a href="./calendar.htm" target="_blank">万年历</a> </li>
-					<li><A href="http://www.ccf.org.cn/sites/ccf/paiming.jsp" target="_blank">CCF 推荐国际学术会议和期刊目录</a> </li>
-					<li><A href="./links/cs.htm" target="_blank">计算机科学与技术类国际期刊</a> </li>
-					<li><A href="./links/ic.htm" target="_blank">信息与控制类国际期刊</a> </li>
+					<li!--><A href="http://www.ccf.org.cn/sites/ccf/paiming.jsp" target="_blank">CCF 推荐国际学术会议和期刊目录</a> </li>
+					<li!--><A href="./links/cs.htm" target="_blank">计算机科学与技术类国际期刊</a> </li-->
+					<li!--><A href="./links/ic.htm" target="_blank">信息与控制类国际期刊</a> </li-->
 					<li><A href="./links/conference.htm" target="_blank">国际会议信息查询网站</a> </li>
 					<li><a href="http://people.brunel.ac.uk/~mastjjb/jeb/info.html" target="_blank">OR-Library</a></li>
 					<li><a href="http://soa.iti.es/instancias-problemas" target="_blank">HFSP数据集</a></li>
 					<li><a href="http://people.idsia.ch/~monaldo/fjsp.html">FJSP数据集</a></li>
 					<li><a href="https://www.eii.uva.es/elena/JSSP/InstancesJSSP.htm">JSP数据集</a></li>	
-					<li><a href="http://comopt.ifi.uni-heidelberg.de/software/TSPLIB95/">TSP数据集</a></li>	
-					<li><a href="https://neo.lcc.uma.es/vrp/vrp-instances/">VRP数据集</a></li> 	
-					<li><a href="https://mp.weixin.qq.com/s?__biz=MzU2NDc1MTE3Mg==&mid=2247492743&idx=1&sn=f6dfe7e72097904df1ab506229142d06&chksm=fc449aaccb3313ba520907c24a7fe3f55baac317a9b2642bea40461c68563b6a34dde58d8251&mpshare=1&scene=23&srcid=0322vT1EvLdkJ39NeNPsZY4a&sharer_sharetime=1616420325599&sharer_shareid=bc983d332939acb33bd9ffe1db12664f#rd">其他运筹优化数据集</a></li> 
-					<li><a href="https://github.com/BIMK/PlatEMO">PlatEMO多目标优化算法平台</a></li> 
-					<li><a href="https://github.com/intLyc/MTO-Platform">MTO-Platform多目标迁移优化算法平台</a></li>
+					<li!--><a href="http://comopt.ifi.uni-heidelberg.de/software/TSPLIB95/">TSP数据集</a></li-->	
+					<li!--><a href="https://neo.lcc.uma.es/vrp/vrp-instances/">VRP数据集</a></li--> 	
+					<li!--><a href="https://mp.weixin.qq.com/s?__biz=MzU2NDc1MTE3Mg==&mid=2247492743&idx=1&sn=f6dfe7e72097904df1ab506229142d06&chksm=fc449aaccb3313ba520907c24a7fe3f55baac317a9b2642bea40461c68563b6a34dde58d8251&mpshare=1&scene=23&srcid=0322vT1EvLdkJ39NeNPsZY4a&sharer_sharetime=1616420325599&sharer_shareid=bc983d332939acb33bd9ffe1db12664f#rd">其他运筹优化数据集</a></li--> 
+					<li!--><a href="https://github.com/BIMK/PlatEMO">PlatEMO多目标优化算法平台</a></li--> 
+					<li!--><a href="https://github.com/intLyc/MTO-Platform">MTO-Platform多目标迁移优化算法平台</a></li-->
 				</ul> 
 
 			</div>
@@ -264,7 +262,7 @@
 			
 			<p>   			
 			Design by: <a href="http://www.styleshout.com/" target="_blank">styleshout</a> | 
-			Modified by: <a href="index.html">Rui Li</a> |
+			Modified by: <a href="index.html">Xiaoxiao Shen</a> |
 			Valid: <a href="http://validator.w3.org/check/referer" target="_blank">XHTML</a> | 
 			<a href="http://jigsaw.w3.org/css-validator/check/referer" target="_blank">CSS</a>	
 			
