--- a/pubs.htm
+++ b/pubs.htm
@@ -122,26 +122,23 @@
 				<!--h3>---2023---</h3--> 
 					<ol reversed>   <!-- 2023-->
 						<li>
-						<b>R. Li</b>, W. Gong*, C.Lu, <font color=#0000ff>Multiform Optimization with Knowledge Transfer for Multi-objective Distributed Heterogeneous Permutation Flowshop Scheduling</font>, <em>IEEE Transactions on Emerging Topics in Computational Intelligence</em>. R0-Under Review. 
+						<font color=#000000> Xiaoxiao Shen, Jun Lv, Shichang Du*, Yafei Denga, Andrea Matta. Dynamic integrated online and offline advance scheduling under multitype revisit demand uncertainty. The International Journal of Management Science. R0-Under Review.</font> 
 						</li>
 						<li>
-						<b>R. Li</b>, W. Gong*, L. Wang*, C.Lu, <font color=#0000ff>Dual-Agents Q-learning and Competitive Swarm Cooperative Optimizer for Green Distributed Heterogeneous Flowshop Scheduling</font>, <em>European Journal of Operational Research</em>. R0-Under Review. 
+						<font color=#000000> Xiaoxiao Shen, et al. Multiserver time window allowance schedules for virtual visits with uncertain time-dependent no shows and service times. Advanced Engineering Informatics. R0-Under Review.</font>
 						</li>
 						<li>
-						<b>R. Li</b>, W. Gong*, L. Wang*, C.Lu, <font color=#0000ff>Learning and Cooperative based Two-phase Optimizer for Distributed Heterogeneous Unrelated Parallel Machine Scheduling with Order Priority</font>, <em>Engineering Application and Artificial Intelligence (T2)</em>. R0-Under Review. 
-						</li>	
+						<font color=#000000> Xiaoxiao Shen, Jun Lv, Shichang Du*, Yafei Deng, Molin Liu, and Yulu Zhou. Integrated Optimization of Electric Vehicles Charging Location and Allocation for Valet Charging Service. Flexible Services and Manufacturing Journal. R0-Under Review.</font>
+						</li>			
 						<li>
-						<b>R. Li</b>, W. Gong*, L. Wang*, C.Lu, <font color=#0000ff>Double DQN-based Coevolution For Green Distributed Heterogeneous Hybrid Flowshop Scheduling with Multiple Priorities of Jobs</font>, <font color="red"><em>IEEE Transactions on Automation Science and Engineering</em></font>. (since 28-Dec-2022) R1-With AE. 
+						<font color=#000000> Xiaoxiao Shen, Shichang Du*, Yan-Ning Sun, Poly Z.H. Sun, Rob Law, Edmond Q. Wu. Advance scheduling for chronic care under online or offline revisit uncertainty, IEEE Transactions on Automation Science and Engineering. R1-Decision in process.</font>
 						</li>
 						<li>
-						<b>R. Li</b>, W. Gong*, L. Wang*, C.Lu, <font color=#0000ff>Co-evolution with Deep Reinforcement Learning For Energy-Aware Distributed Heterogeneous Flexible Job Shop Scheduling</font>, <font color="red"><em>IEEE Transctions on Systems, Man, and Cybernetics: Systems</em></font>. (since 23-Aug-2022) R2-Under Review. 
-						</li>
-						<li>
-						<b>R. Li</b>, W. Gong*, L. Wang*, C.Lu, <font color=#0000ff>Surprisingly Popular-based Adaptive Memetic Algorithm for Energy-efficient Distributed Flexible Job Shop Scheduling</font>, <font color="red"><em>IEEE Transctions on Cybernetics</em></font>. (since 13-Mar-2022) R3-EIC Decision. 
+						<font color=#000000> Xiaoxiao Shen, et al. (2022) Scheduling policies analysis for matching operations in Bernoulli selective assembly lines, International Journal of Production Research, 60:13, 3965-3988.</font>						
 						</li>
 					</ol>
-				<!--h3>---2022---</h3> 
-					<ol reversed>  <!-- 2022 -->
+				<!--h3>---2022---</h3--> 
+					<!--ol reversed>  <!-- 2022 -->
 						<li>
 						<b>R. Li</b>, W. Gong*, C. Lu*, <font color=#0000ff>Two-stage knowledge-driven evolutionary algorithm for distributed flexible job shop scheduling problem with type-2 fuzzy processing time</font>, <em>Swarm and Evolutionary Computation</em>. 2022,74,101139.(T1).[<A href="Code/TSKEA.rar">code Matlab</A>][<A href="https://www.sciencedirect.com/science/article/pii/S2210650222001092?via%3Dihub">paper</A>]
 						</li>			
@@ -157,9 +154,9 @@
 						<li>
 						<b>R. Li</b>, W. Gong*, C. Lu, <font color=#0000ff>Self-adaptive multi-objective evolutionary algorithm for flexible job shop scheduling with fuzzy processing time</font>, <em>Computers & Industrial Enginering</em>. 2022, 168, 108099 .(T2). [<A href="Code/HPEA_code.rar">code Matlab</A>] [<A href="Publication/HPEA-CAIE.pdf">paper</A>]
 						</li>
-					</ol>
-				<h3>---2021---</h3> 
-					<ol>    <!-- 2021 -->
+					</ol-->
+				<!--h3>---2021---</h3--> 
+					<!--ol>    <!-- 2021 -->
 						<li>
 						<b>R. Li</b>, W. Gong*, <font color=#0000ff>An improved multi-objective optimization based on decomposition for bi-objective fuzzy flexible job shop problem</font>, <em>Control Theory & Application</em>. 2022, 39(01): 31-40(EI). [<A href="Code/IMOEAD_FFJSP.rar">code Matlab</A>] [<A href="Publication/IMOEAD-CTAA.pdf">paper in Chinese</A>]
 						</li>    						
