--- a/links.htm
+++ b/links.htm
@@ -12,7 +12,7 @@
 <link rel="shortcut icon" href="favicon.ico" />
 <link rel="stylesheet" href="images/style.css" type="text/css" />
 
-<title>Rui Li's Homepage</title>
+<title>Xiaoxiao Shen's Homepage</title>
 	
 </head>
 
