--- a/chs.htm
+++ b/chs.htm
@@ -163,7 +163,7 @@
 						<h3>SCI</h3> 
 						<ol reversed>         
 						<li>
-						<font color=#000000> Xiaoxiao Shen, Jun Lv, Shichang Du*, Yafei Denga, Andrea Matta. Dynamic integrated online and offline advance scheduling under multitype revisit demand uncertainty. The International Journal of Management Science. R0-Under Review.</font> 
+						<font color=#000000> Xiaoxiao Shen, Jun Lv, Shichang Du*, Yafei Deng, Andrea Matta. Dynamic integrated online and offline advance scheduling under multitype revisit demand uncertainty. The International Journal of Management Science. R0-Under Review.</font> 
 						</li>
 						<li>
 						<font color=#000000> Xiaoxiao Shen, et al. Multiserver time window allowance schedules for virtual visits with uncertain time-dependent no shows and service times. Advanced Engineering Informatics. R0-Under Review.</font>
