--- a/pubs.htm
+++ b/pubs.htm
@@ -122,19 +122,19 @@
 				<!--h3>---2023---</h3--> 
 					<ol reversed>   <!-- 2023-->
 						<li>
-						<font color=#000000> Xiaoxiao Shen, Jun Lv, Shichang Du*, Yafei Denga, Andrea Matta. Dynamic integrated online and offline advance scheduling under multitype revisit demand uncertainty. The International Journal of Management Science. R0-Under Review.</font> 
+						<font color=#000000> Xiaoxiao Shen, Jun Lv, Shichang Du*, Yafei Deng, Andrea Matta. Dynamic advance scheduling for joint online and offline outpatient clinics with uncertain series revisits demand. Socio-Economic Planning Sciences. R0-Under Review.</font> 
 						</li>
 						<li>
-						<font color=#000000> Xiaoxiao Shen, et al. Multiserver time window allowance schedules for virtual visits with uncertain time-dependent no shows and service times. Advanced Engineering Informatics. R0-Under Review.</font>
+						<font color=#000000> Xiaoxiao Shen, et al. Multiserver time window allowance schedules for virtual visits with uncertain time-dependent no-shows and service times. Advanced Engineering Informatics. R1-Under Review.</font>
 						</li>
 						<li>
-						<font color=#000000> Xiaoxiao Shen, Jun Lv, Shichang Du*, Yafei Deng, Molin Liu, and Yulu Zhou. Integrated Optimization of Electric Vehicles Charging Location and Allocation for Valet Charging Service. Flexible Services and Manufacturing Journal. R0-Under Review.</font>
+						<font color=#000000> Xiaoxiao Shen, Jun Lv, Shichang Du*, Yafei Deng, Molin Liu, and Yulu Zhou. Integrated Optimization of Electric Vehicles Charging Location and Allocation for Valet Charging Service. Flexible Services and Manufacturing Journal. 2023. https://doi.org/10.1007/s10696-023-09508-8.</font>
 						</li>			
 						<li>
-						<font color=#000000> Xiaoxiao Shen, Shichang Du*, Yan-Ning Sun, Poly Z.H. Sun, Rob Law, Edmond Q. Wu. Advance scheduling for chronic care under online or offline revisit uncertainty, IEEE Transactions on Automation Science and Engineering. R1-Decision in process.</font>
+						<font color=#000000> Xiaoxiao Shen, Shichang Du*, Yan-Ning Sun, Poly Z.H. Sun, Rob Law, Edmond Q. Wu. Advance scheduling for chronic care under online or offline revisit uncertainty, IEEE Transactions on Automation Science and Engineering. 2023. https://doi.org/10.1109/TASE.2023.3310116.</font>
 						</li>
 						<li>
-						<font color=#000000> Xiaoxiao Shen, et al. (2022) Scheduling policies analysis for matching operations in Bernoulli selective assembly lines, International Journal of Production Research, 60:13, 3965-3988.</font>						
+						<font color=#000000> Xiaoxiao Shen, et al. Scheduling policies analysis for matching operations in Bernoulli selective assembly lines, International Journal of Production Research. 2022. 60:13, 3965-3988.</font>						
 						</li>
 					</ol>
 				<!--h3>---2022---</h3--> 
