--- a/index.html
+++ b/index.html
@@ -128,6 +128,12 @@
 
 				<ul>	
 					<li>
+					<font color=#0000ff>06/2021:</font> My paper entitled: "Advance Scheduling for Chronic Care Under Online or Offline Revisit Uncertainty" has been accepted as a regular paper at <em>IEEE Transactions on Automation Science and Engineering</em>. More details can be found at <a><a href="pubs.htm">Publications</a>.
+					</li>
+					<li>
+					<font color=#0000ff>06/2021:</font> My paper entitled: "Integrated optimization of electric vehicles charging location and allocation for valet charging service" has been accepted as a regular paper at <em>Flexible Services and Manufacturing Journal</em>. More details can be found at <a><a href="pubs.htm">Publications</a>.
+					</li>
+					<li>
 					<font color=#0000ff>06/2021:</font> My paper entitled: "Scheduling policies analysis for matching operations in Bernoulli selective assembly lines" has been accepted as a special paper at <em>International Journal of Production Research</em>. More details can be found at <a><a href="pubs.htm">Publications</a>.
 					</li>
 					<li>
