--- a/pubs.htm
+++ b/pubs.htm
@@ -122,7 +122,7 @@
 				<!--h3>---2023---</h3--> 
 					<ol reversed>   <!-- 2023-->
 						<li>
-						<font color=#000000> Xiaoxiao Shen, Jun Lv, Shichang Du*, Yafei Deng, Andrea Matta. Dynamic advance scheduling for joint online and offline outpatient clinics with uncertain series revisits demand. Socio-Economic Planning Sciences. R0-Under Review.</font> 
+						<font color=#000000> Xiaoxiao Shen, Jun Lv, Shichang Du*, Andrea Matta. Dynamic advance scheduling for joint online and offline outpatient clinics with uncertain series revisits demand. Socio-Economic Planning Sciences. R0-Under Review.</font> 
 						</li>
 						<li>
 						<font color=#000000> Xiaoxiao Shen, et al. Multiserver time window allowance schedules for virtual visits with uncertain time-dependent no-shows and service times. Advanced Engineering Informatics. R1-Under Review.</font>
