--- a/chs.htm
+++ b/chs.htm
@@ -163,20 +163,8 @@
 						<h3>SCI</h3> 
 						<ol reversed>         
 						<li>
-						<font color=#000000> Xiaoxiao Shen, Jun Lv, Shichang Du*, Yafei Deng, Andrea Matta. Dynamic integrated online and offline advance scheduling under multitype revisit demand uncertainty. The International Journal of Management Science. R0-Under Review.</font> 
-						</li>
+						<font color=#000000> More details can be found at <a><a href="pubs.htm">Publications</a>
 						<li>
-						<font color=#000000> Xiaoxiao Shen, et al. Multiserver time window allowance schedules for virtual visits with uncertain time-dependent no shows and service times. Advanced Engineering Informatics. R0-Under Review.</font>
-						</li>
-						<li>
-						<font color=#000000> Xiaoxiao Shen, Jun Lv, Shichang Du*, Yafei Deng, Molin Liu, and Yulu Zhou. Integrated Optimization of Electric Vehicles Charging Location and Allocation for Valet Charging Service. Flexible Services and Manufacturing Journal. R0-Under Review.</font>
-						</li>			
-						<li>
-						<font color=#000000> Xiaoxiao Shen, Shichang Du*, Yan-Ning Sun, Poly Z.H. Sun, Rob Law, Edmond Q. Wu. Advance scheduling for chronic care under online or offline revisit uncertainty, IEEE Transactions on Automation Science and Engineering. R1-Decision in process.</font>
-						</li>
-						<li>
-						<font color=#000000> Xiaoxiao Shen, et al. (2022) Scheduling policies analysis for matching operations in Bernoulli selective assembly lines, International Journal of Production Research, 60:13, 3965-3988.</font>						
-						</li>
 						</ol> 
 							
 						<h3>期刊论文</h3>
