--- a/pubs.htm
+++ b/pubs.htm
@@ -125,7 +125,7 @@
 						<font color=#000000> Xiaoxiao Shen, Jun Lv, Shichang Du*, Andrea Matta. Dynamic advance scheduling for joint online and offline outpatient clinics with uncertain series revisits demand. Socio-Economic Planning Sciences. R0-Under Review.</font> 
 						</li>
 						<li>
-						<font color=#000000> Xiaoxiao Shen, et al. Multiserver time window allowance schedules for virtual visits with uncertain time-dependent no-shows and service times. Advanced Engineering Informatics. R1-Under Review.</font>
+						<font color=#000000> Xiaoxiao Shen, et al. Multiserver time window allowance schedules for virtual visits with uncertain time-dependent no-shows and service times. Advanced Engineering Informatics. Accept, Nov, 2023. https://authors.elsevier.com/c/1i8o25FA1k5poS</font>
 						</li>
 						<li>
 						<font color=#000000> Xiaoxiao Shen, Jun Lv, Shichang Du*, Yafei Deng, Molin Liu, and Yulu Zhou. Integrated Optimization of Electric Vehicles Charging Location and Allocation for Valet Charging Service. Flexible Services and Manufacturing Journal. 2023. https://doi.org/10.1007/s10696-023-09508-8.</font>
