--- a/index.html
+++ b/index.html
@@ -127,6 +127,13 @@
 				<h2>News</h2>
 
 				<ul>	
+                         
+					<li>
+					<font color=#0000ff>11/2023:</font> My paper entitled: "Multiserver time window allowance schedules for virtual visits with uncertain time-dependent no-shows and service times" has been accepted as a special paper at <em>Advanced Engineering Informatics </em>. More details can be found at <a><a href="pubs.htm">Publications</a>.
+					</li>
+					<li>
+					<font color=#0000ff>10/2023:</font> I awarded Zhao Zhumulan doctoral students first-class Scholarship.
+					</li>
 					<li>
 					<font color=#0000ff>08/2023:</font> My paper entitled: "Advance Scheduling for Chronic Care Under Online or Offline Revisit Uncertainty" has been accepted as a regular paper at <em>IEEE Transactions on Automation Science and Engineering</em>. More details can be found at <a><a href="pubs.htm">Publications</a>.
 					</li>
