--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 				<br>My researchgate is <a href="https://www.researchgate.net/profile/Xiaoxiao-Shen-2", target="_blank"><strong>here</strong></a>. 
 				<br>My ORCiD is <a href="https://orcid.org/0000-0003-1396-8451", target="_blank"><strong>here</strong></a>.
 				<br>My phone (Wechat): 18521308203.	
-				<br>My email: sjtusxx98@sjtu.edu.cn; xinjian02698@163.com.
+				<br>My email: sjtusxx98@sjtu.edu.cn; xiaoxiao.shen@mail.polimi.it.
 				<br><br>A beautiful song <strong>"やわらかな光"</strong> is sent to you.<br></br>
 				<audio id="music1" controls="controls" autoplay="autoplay" "loop"="loop" preload id="music1">
 					<source src="BackMusic/music.mp3" type="audio/mp3">					
