--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<div id="header">			
 				
 			<h2 id="logo-text"><a href="index.htm"><font size="6">Dr. Xiaoxiao Shen</font></a></h2>		
-			<p id="slogan">Welcome to My Personal Academic Homepage...</p>		
+			<p id="slogan"><font size="6">Welcome to My Personal Academic Homepage...</font></p>		
 			
 			<div id="header-links">
 			<p>
