--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<!--header -->
 		<div id="header">			
 				
-			<h2 id="logo-text"><a href="index.html"><font size="6">Dr. Xiaoxiao Shen</font></a></h2>		
+			<h2 id="logo-text"><a href="index.htm"><font size="6">Dr. Xiaoxiao Shen</font></a></h2>		
 			<p id="slogan"><font size="6">Welcome to My Personal Academic Homepage...</font></p>		
 			
 			<div id="header-links">
