--- a/indexl.html
+++ b/indexl.html
@@ -24,12 +24,12 @@
 		<!--header -->
 		<div id="header">			
 				
-			<h2 id="logo-text"><a href="index.htm"><font size="6">Dr. Xiaoxiao Shen</font></a></h2>		
+			<h2 id="logo-text"><a href="indexl.htm"><font size="6">Dr. Xiaoxiao Shen</font></a></h2>		
 			<p id="slogan"><font size="3">Welcome to My Personal Academic Homepage...</font></p>		
 			
 			<div id="header-links">
 			<p>
-				<a href="index.html">Home</a> | 
+				<a href="indexl.html">Home</a> | 
 				<a href="contact.htm">Contact</a>			
 			</p>		
 		</div>		
