--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
 <div id="wrap">
 		
 		<!--header -->
-		<div id="header">							
+		<div id="header">			
+				
 			<h2 id="logo-text"><a href="index.htm"><font size="6">Dr. Xiaoxiao Shen</font></a></h2>		
-			<p id="slogan"><font size="3">Welcome to My Personal Academic Homepage...</font></p>					
+			<p id="slogan">Welcome to My Personal Academic Homepage...</p>		
+			
 			<div id="header-links">
 			<p>
 				<a href="index.html">Home</a> | 
