--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<!-- menu -->	
 		<div  id="menu">
 			<ul>
-				<li id="current"><a href="index.htm"><span>Home</span></a></li>
+				<li id="current"><a href="index.html"><span>Home</span></a></li>
 				<li><a href="pubs.htm"><span>Publications</span></a></li>
 				<li><a href="downloads.htm"><span>Downloads</span></a></li>
 				<li><a href="links.htm"><span>Links</span></a></li>
