--- a/index.html
+++ b/index.html
@@ -173,9 +173,7 @@
 			<p>   			
 			Design by: <a href="http://www.styleshout.com/" target="_blank">styleshout</a> | 
 			Modified by: <a href="index.htm">Xiaoxiao Shen</a> |
-			Visits: <a href="https://clustrmaps.com/site/1buq4"  title="Visit tracker"> Map</a> | 	
-			Valid: <a href="http://validator.w3.org/check/referer" target="_blank">XHTML</a> | 
-			<a href="http://jigsaw.w3.org/css-validator/check/referer" target="_blank">CSS</a>		
+			Visits: <a href="https://clustrmaps.com/site/1buq4"  title="Visit tracker"> Map</a> 		
 			
 			<br>
 			<SCRIPT  LANGUAGE="JavaScript">
