--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
 				<h2>Awarded Honors</h2>
 
 				<ul>
-					<li><font color=#000000>National Scholarship, National Inspirational Scholarship, Shanghai Jiao Tong University Huihe Medical Scholarship, 2017, 2018, 2021.</font> </li>
-					<li><font color=#000000>There are more than 10 awards of national and above mathematical modeling competitions, including the Meritorious Winner Prize (first prize) of the Interdisciplinary Contest In Modeling, the second prize of the "Huawei Cup" National Graduate Mathematical Modeling Contest (twice in 2019 and 2020), the second prize of the postgraduate group of the Asia-Pacific College Mathematical Contest in Modeling (APMCM), the third prize of the National Undergraduate Mathematical Modeling Contest in Jiangsu Province, etc</font> </li>
-					<li><font color=#000000>The first prize of the fourth "FAW Toyota Cup" Industrial Engineering and Lean Management Innovation Competition in 2021 China University Students Mechanical Engineering Innovation Competition</font> </li>
-					<li><font color=#000000>The third prize of the 16th "Dongfeng Nissan Cup" Tsinghua IE Liangjian National Industrial Engineering Application Case Competition in 2021</font> </li>					
-					<li><font color=#000000>The second prize for groups and the third prize for individuals in the POCIB National College Students' Foreign Trade Ability Competition in 2016</font> </li>
-					<li><font color=#000000>Outstanding League Cadres of Shanghai Jiao Tong University and Three Good Students of Shanghai Jiao Tong University</font> </li>	
+					<li>National Scholarship, National Inspirational Scholarship, Shanghai Jiao Tong University Huihe Medical Scholarship, 2017, 2018, 2021.</font> </li>
+					<li>There are more than 10 awards of national and above mathematical modeling competitions, including the Meritorious Winner Prize (first prize) of the Interdisciplinary Contest In Modeling, the second prize of the "Huawei Cup" National Graduate Mathematical Modeling Contest (twice in 2019 and 2020), the second prize of the postgraduate group of the Asia-Pacific College Mathematical Contest in Modeling (APMCM), the third prize of the National Undergraduate Mathematical Modeling Contest in Jiangsu Province, etc</font> </li>
+					<li>The first prize of the fourth "FAW Toyota Cup" Industrial Engineering and Lean Management Innovation Competition in 2021 China University Students Mechanical Engineering Innovation Competition</font> </li>
+					<li>The third prize of the 16th "Dongfeng Nissan Cup" Tsinghua IE Liangjian National Industrial Engineering Application Case Competition in 2021</font> </li>					
+					<li>The second prize for groups and the third prize for individuals in the POCIB National College Students' Foreign Trade Ability Competition in 2016</font> </li>
+					<li>Outstanding League Cadres of Shanghai Jiao Tong University and Three Good Students of Shanghai Jiao Tong University</font> </li>	
 				</ul>	
 
 				<a name="activities"></a>				
