--- a/pubs.htm
+++ b/pubs.htm
@@ -75,19 +75,19 @@
 				<!--h3>---2023---</h3--> 
 					<ol reversed>   <!-- 2023-->
 						<li>
-						<font color=#000000> Xiaoxiao Shen, Jun Lv, Shichang Du*, Andrea Matta. Dynamic advance scheduling for joint online and offline outpatient clinics with uncertain series revisits demand. Socio-Economic Planning Sciences. R0-Under Review.</font> 
+						Xiaoxiao Shen, Jun Lv, Shichang Du*, Andrea Matta. Dynamic advance scheduling for joint online and offline outpatient clinics with uncertain series revisits demand. Socio-Economic Planning Sciences. R0-Under Review. 
 						</li>
 						<li>
-						<font color=#000000> Xiaoxiao Shen, et al. Multiserver time window allowance schedules for virtual visits with uncertain time-dependent no-shows and service times. Advanced Engineering Informatics. Accept, Nov, 2023. https://authors.elsevier.com/c/1i8o25FA1k5poS</font>
+						Xiaoxiao Shen, et al. Multiserver time window allowance schedules for virtual visits with uncertain time-dependent no-shows and service times. Advanced Engineering Informatics. Accept, Nov, 2023. https://authors.elsevier.com/c/1i8o25FA1k5poS
 						</li>
 						<li>
-						<font color=#000000> Xiaoxiao Shen, Jun Lv, Shichang Du*, Yafei Deng, Molin Liu, and Yulu Zhou. Integrated Optimization of Electric Vehicles Charging Location and Allocation for Valet Charging Service. Flexible Services and Manufacturing Journal. 2023. https://doi.org/10.1007/s10696-023-09508-8.</font>
+						Xiaoxiao Shen, Jun Lv, Shichang Du*, Yafei Deng, Molin Liu, and Yulu Zhou. Integrated Optimization of Electric Vehicles Charging Location and Allocation for Valet Charging Service. Flexible Services and Manufacturing Journal. 2023. https://doi.org/10.1007/s10696-023-09508-8.
 						</li>			
 						<li>
-						<font color=#000000> Xiaoxiao Shen, Shichang Du*, Yan-Ning Sun, Poly Z.H. Sun, Rob Law, Edmond Q. Wu. Advance scheduling for chronic care under online or offline revisit uncertainty, IEEE Transactions on Automation Science and Engineering. 2023. https://doi.org/10.1109/TASE.2023.3310116.</font>
+						Xiaoxiao Shen, Shichang Du*, Yan-Ning Sun, Poly Z.H. Sun, Rob Law, Edmond Q. Wu. Advance scheduling for chronic care under online or offline revisit uncertainty, IEEE Transactions on Automation Science and Engineering. 2023. https://doi.org/10.1109/TASE.2023.3310116.
 						</li>
 						<li>
-						<font color=#000000> Xiaoxiao Shen, et al. Scheduling policies analysis for matching operations in Bernoulli selective assembly lines, International Journal of Production Research. 2022. 60:13, 3965-3988.</font>						
+						Xiaoxiao Shen, et al. Scheduling policies analysis for matching operations in Bernoulli selective assembly lines, International Journal of Production Research. 2022. 60:13, 3965-3988.						
 						</li>
 					</ol>
 				<!--h3>---2022---</h3--> 
@@ -151,8 +151,7 @@
 			<p>   			
 			Design by: <a href="http://www.styleshout.com/" target="_blank">styleshout</a> | 
 			Modified by: <a href="index.html">Xiaoxiao Shen</a> |
-			Valid: <a href="http://validator.w3.org/check/referer" target="_blank">XHTML</a> | 
-			<a href="http://jigsaw.w3.org/css-validator/check/referer" target="_blank">CSS</a>		
+			Visits: <a href="https://clustrmaps.com/site/1buq4"  title="Visit tracker"> Map</a> 		
 			
 			<br>
 			<SCRIPT  LANGUAGE="JavaScript">
