--- a/chs.htm
+++ b/chs.htm
@@ -141,21 +141,21 @@
 				<h2>所获奖励</h2>
 
 				<ul>		
-					<li><font color=#000000>上海交通大学机械与动力工程学院优秀团支部, 07/2022.</font></li>
-					<li><font color=#000000>上海交通大学优秀团干部, 05/2022.</font></li>
-					<li><font color=#000000>上海交通大学主题团日三等奖, 12/2021.</font></li>
-					<li><font color=#000000>中国大学生机械工程创新大赛“一汽丰田杯”第四届工业工程与精益管理创新赛全国一等奖, 12/2021.</font></li>
-					<li><font color=#000000>第十六届“东风日产杯”清华IE亮剑全国工业工程应用案例大赛全国三等奖, 11/2021.</font></li>
-					<li><font color=#000000>上海交通大学汇禾医疗奖学金, 10/2021.</font></li>
-					<li><font color=#000000>上海交通大学三好学生, 09/2021.</font></li>
-					<li><font color=#000000>中国研究生创新实践系列大赛“华为杯”第十六届研究生数学建模竞赛全国二等奖, 10/2020.</font></li>
-					<li><font color=#000000>第九届亚太地区大学生数学建模竞赛（APMCM）研究生组全国二等奖, 12/2019.</font></li>
-					<li><font color=#000000>中国研究生创新实践系列大赛“华为杯”第十七届研究生数学建模竞赛全国二等奖, 10/2019.</li>
-					<li><font color=#000000>国家励志奖学金, 09/2018.</font></li>	
-					<li><font color=#000000>美国大学生数学建模竞赛Meritorious Winner（一等奖）, 04/2018.</font></li>
-					<li><font color=#000000>“高教杯”全国大学生数学建模竞赛（江苏赛区）三等奖, 12/2017.</font></li>
-					<li><font color=#000000>国家奖学金, 9/2017.</font></li>
-					<li><font color=#000000>POCIB全国大学生外贸从业能力大赛团体二等奖、个人三等奖, 05/2017.</font></li>
+					<li>上海交通大学机械与动力工程学院优秀团支部, 07/2022.</li>
+					<li>上海交通大学优秀团干部, 05/2022.</li>
+					<li>上海交通大学主题团日三等奖, 12/2021.</li>
+					<li>中国大学生机械工程创新大赛“一汽丰田杯”第四届工业工程与精益管理创新赛全国一等奖, 12/2021.</li>
+					<li>第十六届“东风日产杯”清华IE亮剑全国工业工程应用案例大赛全国三等奖, 11/2021.</li>
+					<li>上海交通大学汇禾医疗奖学金, 10/2021.</li>
+					<li>上海交通大学三好学生, 09/2021.</li>
+					<li>中国研究生创新实践系列大赛“华为杯”第十六届研究生数学建模竞赛全国二等奖, 10/2020.</li>
+					<li>第九届亚太地区大学生数学建模竞赛（APMCM）研究生组全国二等奖, 12/2019.</li>
+					<li>中国研究生创新实践系列大赛“华为杯”第十七届研究生数学建模竞赛全国二等奖, 10/2019.</li>
+					<li>国家励志奖学金, 09/2018.</li>	
+					<li>美国大学生数学建模竞赛Meritorious Winner（一等奖）, 04/2018.</li>
+					<li>“高教杯”全国大学生数学建模竞赛（江苏赛区）三等奖, 12/2017.</li>
+					<li>国家奖学金, 9/2017.</li>
+					<li>POCIB全国大学生外贸从业能力大赛团体二等奖、个人三等奖, 05/2017.</li>
 				</ul>
 
 				<a name="Project"></a>
@@ -204,8 +204,7 @@
 			<p>   			
 			Design by: <a href="http://www.styleshout.com/" target="_blank">styleshout</a> | 
 			Modified by: <a href="index.html">Xiaoxiao Shen</a> |
-			Valid: <a href="http://validator.w3.org/check/referer" target="_blank">XHTML</a> | 
-			<a href="http://jigsaw.w3.org/css-validator/check/referer" target="_blank">CSS</a>	
+			Visits: <a href="https://clustrmaps.com/site/1buq4"  title="Visit tracker"> Map</a>	
 			
 			<br>
 			<SCRIPT  LANGUAGE="JavaScript">
