--- a/pubs.htm
+++ b/pubs.htm
@@ -127,7 +127,7 @@
 					<!--h3>---2023---</h3--> 
 					<ol reversed>    <!-- 2023 -->
 						<li>
-						<font color=#000000>Yan-Ning Sun, Qun-Long Chen, Jin-Hua Hu, Hong-Wei Xu, Wei Qin*, Zi-Long Zhuang, Xiaoxiao Shen. An integrated CRN-SVR approach for the quality consistency improvement in a diesel engine assembly process, International Journal of Computer Integrated Manufacturing. April, 2023, Accept.
+						Yan-Ning Sun, Qun-Long Chen, Jin-Hua Hu, Hong-Wei Xu, Wei Qin*, Zi-Long Zhuang, Xiaoxiao Shen. An integrated CRN-SVR approach for the quality consistency improvement in a diesel engine assembly process, International Journal of Computer Integrated Manufacturing. April, 2023, Accept.
 						</li>
 						<!--li>
 						C.Luo, W. Gong*, <b>R. Li</b>, C. Lu, <font color=#0000ff>Problem-specific Knowledge MOEA/D for Energy-efficient Scheduling of Distributed Permutation Flow Shop in Heterogeneous Factories</font>, <em>Engineering Application and Artificial Intelligence (T2)</em>. May, 2023, Accept. 
